@@ -2,14 +2,9 @@ package com.example.demo;
 
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestParam;
-
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Comparator;
-import java.util.List;
+import org.springframework.web.bind.annotation.*;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Controller
 public class HomeController {
@@ -17,15 +12,11 @@ public class HomeController {
     private final List<Employee> employees = new ArrayList<>();
     private final List<ShiftAssignment> generatedSchedule = new ArrayList<>();
 
-    // UPDATED: Full Monday through Sunday, Morning and Evening shifts
     private final List<String> definedShifts = Arrays.asList(
-            "Monday Morning", "Monday Evening",
-            "Tuesday Morning", "Tuesday Evening",
-            "Wednesday Morning", "Wednesday Evening",
-            "Thursday Morning", "Thursday Evening",
-            "Friday Morning", "Friday Evening",
-            "Saturday Morning", "Saturday Evening",
-            "Sunday Morning", "Sunday Evening"
+            "Mon Morning", "Mon Evening", "Tue Morning", "Tue Evening",
+            "Wed Morning", "Wed Evening", "Thu Morning", "Thu Evening",
+            "Fri Morning", "Fri Evening", "Sat Morning", "Sat Evening",
+            "Sun Morning", "Sun Evening"
     );
 
     @GetMapping("/")
@@ -33,60 +24,58 @@ public class HomeController {
         model.addAttribute("employees", employees);
         model.addAttribute("definedShifts", definedShifts);
         model.addAttribute("schedule", generatedSchedule);
+
+        // Find people with 0 hours assigned
+        List<Employee> unassigned = employees.stream()
+                .filter(e -> e.getAssignedHours() == 0)
+                .collect(Collectors.toList());
+        model.addAttribute("unassigned", unassigned);
+
         return "index";
     }
 
     @PostMapping("/add-employee")
-    public String addEmployee(@RequestParam String name,
-                              @RequestParam String role,
-                              @RequestParam int maxHours,
-                              @RequestParam(required = false) List<String> availability) {
-        if (availability == null) availability = new ArrayList<>();
-        employees.add(new Employee(name, role, maxHours, availability));
+    public String addEmployee(@RequestParam String name, @RequestParam String role,
+                              @RequestParam int maxHours, @RequestParam(required = false) List<String> availability) {
+        employees.add(new Employee(name, role, maxHours, availability == null ? new ArrayList<>() : availability));
         return "redirect:/";
     }
 
-    // THE BRAIN OF THE APP (UPDATED FOR DYNAMIC STAFFING)
-    @PostMapping("/generate")
-    public String generateSchedule(@RequestParam int staffNeeded) { // <-- Catches the number from your webpage
+    // New: Delete specific employee
+    @GetMapping("/delete-employee/{index}")
+    public String deleteEmployee(@PathVariable int index) {
+        employees.remove(index);
+        return "redirect:/";
+    }
+
+    // New: Reset everything
+    @PostMapping("/reset-all")
+    public String resetAll() {
+        employees.clear();
         generatedSchedule.clear();
+        return "redirect:/";
+    }
 
-        for (Employee e : employees) {
-            e.setAssignedHours(0);
-        }
-
-        int SHIFT_LENGTH = 8;
+    @PostMapping("/generate")
+    public String generateSchedule(@RequestParam int staffNeeded) {
+        generatedSchedule.clear();
+        employees.forEach(e -> e.setAssignedHours(0));
 
         for (String shift : definedShifts) {
+            Employee manager = employees.stream()
+                    .filter(e -> e.getRole().equals("MANAGER") && e.isAvailable(shift) && e.getAssignedHours() < e.getMaxHours())
+                    .min(Comparator.comparingInt(Employee::getAssignedHours)).orElse(null);
 
-            // 1. Find exactly ONE Manager
-            Employee chosenManager = employees.stream()
-                    .filter(e -> e.getRole().equals("MANAGER"))
-                    .filter(e -> e.isAvailable(shift))
-                    .filter(e -> e.getAssignedHours() + SHIFT_LENGTH <= e.getMaxHours())
-                    .min(Comparator.comparingInt(Employee::getAssignedHours))
-                    .orElse(null);
+            if (manager != null) manager.addHours(8);
 
-            if (chosenManager != null) {
-                chosenManager.addHours(SHIFT_LENGTH);
-            }
-
-            // 2. Find the Normal Staff (Using your dynamic number!)
-            List<Employee> chosenStaff = employees.stream()
-                    .filter(e -> e.getRole().equals("NORMAL"))
-                    .filter(e -> e.isAvailable(shift))
-                    .filter(e -> e.getAssignedHours() + SHIFT_LENGTH <= e.getMaxHours())
+            List<Employee> staff = employees.stream()
+                    .filter(e -> e.getRole().equals("NORMAL") && e.isAvailable(shift) && e.getAssignedHours() < e.getMaxHours())
                     .sorted(Comparator.comparingInt(Employee::getAssignedHours))
-                    .limit(staffNeeded) // <-- It now cuts off at whatever number you typed in!
-                    .toList();
+                    .limit(staffNeeded).collect(Collectors.toList());
 
-            for (Employee staff : chosenStaff) {
-                staff.addHours(SHIFT_LENGTH);
-            }
-
-            generatedSchedule.add(new ShiftAssignment(shift, chosenManager, chosenStaff));
+            staff.forEach(s -> s.addHours(8));
+            generatedSchedule.add(new ShiftAssignment(shift, manager, staff));
         }
-
         return "redirect:/";
     }
 }
